tests/baselines/reference/decoratorOnEnum.errors.txt
decoratorOnEnum.ts(3,1): error TS1206: Decorators are not valid here.


==== decoratorOnEnum.ts (1 errors) ====
    declare function dec<T>(target: T): T;
    
    @dec
    ~
!!! error TS1206: Decorators are not valid here.
    enum E {
    }